--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -601,6 +601,7 @@ services:
       - SMB_NFS_ACES=yes
       - SMB_METADATA=stream
       - SMB_PORT=445
+      - VOLUME_SIZE_LIMIT="1000000"
       - SMB_VFS_OBJECTS=acl_xattr fruit streams_xattr
       - VOLUME_SIZE_LIMIT=0
       - WORKGROUP=WORKGROUP
