--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -168,37 +168,6 @@ services:
       - "traefik.frontend.headers.STSIncludeSubdomains=true"
       - "traefik.frontend.headers.STSPreload=true"
       - "traefik.frontend.headers.frameDeny=false"
-  # netdata: 
-  #   environment: 
-  #     - "TZ=${TZ}"
-  #     - "PUID=${PUID}"
-  #     - "PGID=${PGID}"
-  #   container_name: netdata
-  #   image: netdata/netdata:latest
-  #   labels: 
-  #     - traefik.enable=true
-  #     - traefik.backend=netdata
-  #     - "traefik.frontend.rule=Host:netdata.${DOMAINNAME}"
-  #     - traefik.port=19999
-  #     - traefik.docker.network=traefik_proxy
-  #     - traefik.frontend.headers.SSLRedirect=true
-  #     - traefik.frontend.headers.STSSeconds=315360000
-  #     - traefik.frontend.headers.browserXSSFilter=true
-  #     - traefik.frontend.headers.contentTypeNosniff=true
-  #     - traefik.frontend.headers.forceSTSHeader=true
-  #     - traefik.frontend.headers.SSLHost=frost.haus
-  #     - traefik.frontend.headers.STSIncludeSubdomains=true
-  #     - traefik.frontend.headers.STSPreload=true
-  #     - traefik.frontend.headers.frameDeny=false
-  #   networks: 
-  #     - traefik_proxy
-  #   security_opt: 
-  #     - "apparmor:unconfined"
-  #   volumes: 
-  #     - "/proc:/host/proc:ro"
-  #     - "/sys:/host/sys:ro"
-  #     - "/var/run/docker.sock:/var/run/docker.sock"
-  #     - "/mnt/storage/appdata/netdata:/etc/netdata"
   organizr: 
     container_name: organizr
     environment: 
@@ -604,28 +573,30 @@ services:
       - traefik.frontend.headers.STSIncludeSubdomains=true
       - traefik.frontend.headers.STSPreload=true
       - traefik.frontend.headers.frameDeny=false
-  # frigate:
-  #   container_name: frigate
-  #   privileged: true # this may not be necessary for all setups
-  #   restart: unless-stopped
-  #   image: blakeblackshear/frigate:stable-amd64
-  #   devices:
-  #     - /dev/bus/usb:/dev/bus/usb
-  #     - /dev/dri/renderD128 # for intel hwaccel, needs to be updated for your hardware
-  #   volumes:
-  #     - /etc/localtime:/etc/localtime:ro
-  #     - /mnt/storage/appdata/frigate/frigate.yml:/config/config.yml:ro
-  #     - /mnt/storage/media/frigate/:/media/frigate/
-  #     # - type: tmpfs # Optional: 1GB of memory, reduces SSD/SD Card wear
-  #     #   target: /tmp/cache
-  #     #   tmpfs:
-  #     #     size: 1000000000
-  #   ports:
-  #     - "5000:5000"
-  #     - "1935:1935" # RTMP feeds
-  #   network_mode: host
-  #   environment:
-  #     - FRIGATE_RTSP_PASSWORD="password"
-  #     - "PUID=${PUID}"
-  #     - "PGID=${PGID}"
-  #     - TZ=America/Chicago
+  overseerr:
+    image: linuxserver/overseerr:1.27.0
+    container_name: overseerr
+    restart: unless-stopped
+    environment:
+      - "PUID=${PUID}"
+      - "PGID=${PGID}"
+      - TZ=America/Chicago
+      - DOCKER_MODS=linuxserver/mods:universal-cron
+    volumes:
+      - "/mnt/storage/appdata/overseerr:/config"
+      - /mnt/storage/appdata/healthcheck:/config/crontabs
+    labels: 
+      - traefik.enable=true
+      - traefik.backend=overseerr
+      - "traefik.frontend.rule=Host:overseerr.${DOMAINNAME}"
+      - traefik.port=5055
+      - traefik.docker.network=traefik_proxy
+      - traefik.frontend.headers.SSLRedirect=true
+      - traefik.frontend.headers.STSSeconds=315360000
+      - traefik.frontend.headers.browserXSSFilter=true
+      - traefik.frontend.headers.contentTypeNosniff=true
+      - traefik.frontend.headers.forceSTSHeader=true
+      - traefik.frontend.headers.SSLHost=frost.haus
+      - traefik.frontend.headers.STSIncludeSubdomains=true
+      - traefik.frontend.headers.STSPreload=true
+      - traefik.frontend.headers.frameDeny=false
