added hallmark volume mount to radarr

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -320,7 +320,8 @@ services:
       - "/mnt/appdata/radarr:/config"
       - "/mnt/media/movies:/movies"
       - "/mnt/media/downloads/movie-downloads:/movie-downloads"
-      - /mnt/appdata/healthcheck:/config/crontabs
+      - "/mnt/media/hallmark:/hallmark"
+      - "/mnt/appdata/healthcheck:/config/crontabs"
   sabnzbd: 
     container_name: sabnzbd
     environment: 
