--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -648,6 +648,7 @@ services:
         hard: 65536
   watchtower:
     image: containrrr/watchtower
+    container_name: watchtower
     volumes:
       - "/var/run/docker.sock:/var/run/docker.sock"
       # - /root/.docker/config.json:/config.json
