--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -650,6 +650,8 @@ services:
     image: containrrr/watchtower
     container_name: watchtower
     volumes:
-      - "/var/run/docker.sock:/var/run/docker.sock"
-      # - /root/.docker/config.json:/config.json
+      - /var/run/docker.sock:/var/run/docker.sock:ro
     command: --interval 1200
+    environment: 
+      - WATCHTOWER_NOTIFICATIONS_LEVEL=info
+      - WATCHTOWER_NOTIFICATION_SLACK_CHANNEL=${WATCHSLACK}
