--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -651,7 +651,7 @@ services:
     container_name: watchtower
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock:ro
-    command: --interval 1200
     environment: 
       - WATCHTOWER_NOTIFICATIONS_LEVEL=info
       - WATCHTOWER_NOTIFICATION_SLACK_CHANNEL=${WATCHSLACK}
+      - WATCHTOWER_POLL_INTERVAL=1200
