--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -655,3 +655,5 @@ services:
       - WATCHTOWER_NOTIFICATIONS_LEVEL=info
       - WATCHTOWER_NOTIFICATION_SLACK_CHANNEL=${WATCHSLACK}
       - WATCHTOWER_POLL_INTERVAL=1200
+      - WATCHTOWER_CLEANUP=true
+      - WATCHTOWER_DEBUG=true
