working on watchtower notifiocations

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -653,6 +653,7 @@ services:
       - /var/run/docker.sock:/var/run/docker.sock:ro
     environment: 
       - WATCHTOWER_NOTIFICATIONS_LEVEL=info
+      - WATCHTOWER_NOTIFICATIONS=slack
       - WATCHTOWER_NOTIFICATION_SLACK_CHANNEL=${WATCHSLACK}
       - WATCHTOWER_POLL_INTERVAL=1200
       - WATCHTOWER_CLEANUP=true
