quotes for watchtower

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -654,7 +654,7 @@ services:
     environment: 
       - WATCHTOWER_NOTIFICATIONS_LEVEL=info
       - WATCHTOWER_NOTIFICATIONS=slack
-      - WATCHTOWER_NOTIFICATION_SLACK_CHANNEL=${WATCHSLACK}
+      - "WATCHTOWER_NOTIFICATION_SLACK_CHANNEL=${WATCHSLACK}"
       - WATCHTOWER_POLL_INTERVAL=1200
       - WATCHTOWER_CLEANUP=true
       - WATCHTOWER_DEBUG=true
