slack for watchtower

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -653,6 +653,8 @@ services:
       - /var/run/docker.sock:/var/run/docker.sock:ro
     environment: 
       - WATCHTOWER_NOTIFICATIONS=slack
-      - "WATCHTOWER_NOTIFICATION_SLACK_CHANNEL=${WATCHSLACK}"
+      - "WATCHTOWER_NOTIFICATION_SLACK_HOOK_URL=${WATCHSLACK}"
+      - WATCHTOWER_NOTIFICATION_SLACK_IDENTIFIER=Pepper
+      - "WATCHTOWER_NOTIFICATION_SLACK_CHANNEL=#pepper"
       - WATCHTOWER_POLL_INTERVAL=1200
       - WATCHTOWER_CLEANUP=true
