--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -659,6 +659,7 @@ services:
       - "PUID=${PUID}"
       - "PGID=${PGID}"
       - TZ=America/Chicago
+      - WATCHTOWER_DEBUG=true
     restart: unless-stopped
     labels: 
       - traefik.enable=true
