removed the poll interval

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -654,7 +654,7 @@ services:
     environment: 
       - WATCHTOWER_NOTIFICATIONS=slack
       - "WATCHTOWER_NOTIFICATION_SLACK_HOOK_URL=${WATCHSLACK}"
-      - WATCHTOWER_POLL_INTERVAL=1200
+      # - WATCHTOWER_POLL_INTERVAL=1200
       - WATCHTOWER_CLEANUP=true
       - "PUID=${PUID}"
       - "PGID=${PGID}"
