--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -651,15 +651,16 @@ services:
     container_name: watchtower
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock:ro
+      - /mnt/appdata/watchtower/config.json:/config.json
     environment: 
       - WATCHTOWER_NOTIFICATIONS=slack
       - "WATCHTOWER_NOTIFICATION_SLACK_HOOK_URL=${WATCHSLACK}"
-      - WATCHTOWER_POLL_INTERVAL=60
+      - WATCHTOWER_POLL_INTERVAL=1200
       - WATCHTOWER_CLEANUP=true
       - "PUID=${PUID}"
       - "PGID=${PGID}"
       - TZ=America/Chicago
-      - WATCHTOWER_DEBUG=true
+      # - WATCHTOWER_DEBUG=true
     restart: unless-stopped
     labels: 
       - traefik.enable=true
