--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -679,3 +679,15 @@ services:
       - traefik.frontend.headers.STSIncludeSubdomains=true
       - traefik.frontend.headers.STSPreload=true
       - traefik.frontend.headers.frameDeny=false
+  pmm:
+    image: meisnate12/plex-meta-manager
+    container_name: pmm
+    volumes:
+      - /mnt/appdata/pmm:/config
+      - /mnt/media/tv:/tvshows
+      - /mnt/media/movies:/movies
+    environment:
+      - PUID=${PUID}
+      - PGID=${PGID}
+      - TZ=America/Chicago
+    restart: always
