--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -717,3 +717,13 @@ services:
       - traefik.frontend.headers.STSIncludeSubdomains=true
       - traefik.frontend.headers.STSPreload=true
       - traefik.frontend.headers.frameDeny=false
+  plexautoskip:
+    image: ghcr.io/mdhiggins/plexautoskip-docker
+    container_name: plexautoskip
+    environment:
+      - "PUID=${PUID}"
+      - "PGID=${PGID}"
+      - TZ=America/Chicago
+    volumes:
+      - "/mnt/appdata/plexautoskip:/config"
+    restart: unless-stopped
