--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -46,72 +46,72 @@ services:
       - "PUID=${PUID}"
       - "PGID=${PGID}"    
     restart: always
-  inventory-hunter-3070:
-    container_name: inventory-hunter-3070
-    image: ericjmarti/inventory-hunter:latest
-    command: "/src/run.bash --alerter slack --alerter-config /alerters.yaml"
-    volumes:
-      - /mnt/appdata/inventory-hunter/data:/data
-      - /mnt/appdata/inventory-hunter/log:/log
-      - /mnt/appdata/inventory-hunter/3070.yaml:/config.yaml
-      - /mnt/appdata/inventory-hunter/alerters.yaml:/alerters.yaml
-    restart: unless-stopped 
-  inventory-hunter-ps5:
-      container_name: inventory-hunter-ps5
-      image: ericjmarti/inventory-hunter:latest
-      command: "/src/run.bash --alerter slack --alerter-config /alerters.yaml"
-      volumes:
-        - /mnt/appdata/inventory-hunter/data:/data
-        - /mnt/appdata/inventory-hunter/log:/log
-        - /mnt/appdata/inventory-hunter/ps5.yaml:/config.yaml
-        - /mnt/appdata/inventory-hunter/alerters.yaml:/alerters.yaml
-      restart: unless-stopped 
-  nextcloud:
-    image: ghcr.io/linuxserver/nextcloud
-    container_name: nextcloud
-    environment:
-      - TZ=America/Chicago
-      - "PUID=${PUID}"
-      - "PGID=${PGID}"
-    volumes:
-      - /mnt/appdata/nextcloud/config:/config
-      - /mnt/appdata/nextcloud/data:/data
-    restart: unless-stopped
-    ports:
-      - 443:443
-    networks: 
-      macvlan_network:
-        ipv4_address: 192.168.100.11
-  bazarr:
-    image: linuxserver/bazarr
-    container_name: bazarr
-    environment:
-      - "PUID=${PUID}"
-      - "PGID=${PGID}"
-      - "TZ=${TZ}"
-      - UMASK_SET=022
-    volumes:
-      - "/mnt/media/movies:/movies"
-      - "/mnt/media/tv:/tv"
-      - "/mnt/appdata/bazarr/config:/config"
-    restart: unless-stopped
-    labels: 
-      - traefik.enable=true
-      - traefik.backend=bazarr
-      - "traefik.frontend.rule=Host:bazarr.${DOMAINNAME}"
-      - traefik.port=6767
-      - traefik.docker.network=traefik_proxy
-      - traefik.frontend.headers.SSLRedirect=true
-      - traefik.frontend.headers.STSSeconds=315360000
-      - traefik.frontend.headers.browserXSSFilter=true
-      - traefik.frontend.headers.contentTypeNosniff=true
-      - traefik.frontend.headers.forceSTSHeader=true
-      - traefik.frontend.headers.SSLHost=frost.haus
-      - traefik.frontend.headers.STSIncludeSubdomains=true
-      - traefik.frontend.headers.STSPreload=true
-      - traefik.frontend.headers.frameDeny=false
-    networks: 
-      - traefik_proxy
+  # inventory-hunter-3070:
+  #   container_name: inventory-hunter-3070
+  #   image: ericjmarti/inventory-hunter:latest
+  #   command: "/src/run.bash --alerter slack --alerter-config /alerters.yaml"
+  #   volumes:
+  #     - /mnt/appdata/inventory-hunter/data:/data
+  #     - /mnt/appdata/inventory-hunter/log:/log
+  #     - /mnt/appdata/inventory-hunter/3070.yaml:/config.yaml
+  #     - /mnt/appdata/inventory-hunter/alerters.yaml:/alerters.yaml
+  #   restart: unless-stopped 
+  # inventory-hunter-ps5:
+  #     container_name: inventory-hunter-ps5
+  #     image: ericjmarti/inventory-hunter:latest
+  #     command: "/src/run.bash --alerter slack --alerter-config /alerters.yaml"
+  #     volumes:
+  #       - /mnt/appdata/inventory-hunter/data:/data
+  #       - /mnt/appdata/inventory-hunter/log:/log
+  #       - /mnt/appdata/inventory-hunter/ps5.yaml:/config.yaml
+  #       - /mnt/appdata/inventory-hunter/alerters.yaml:/alerters.yaml
+  #     restart: unless-stopped 
+  # nextcloud:
+  #   image: ghcr.io/linuxserver/nextcloud
+  #   container_name: nextcloud
+  #   environment:
+  #     - TZ=America/Chicago
+  #     - "PUID=${PUID}"
+  #     - "PGID=${PGID}"
+  #   volumes:
+  #     - /mnt/appdata/nextcloud/config:/config
+  #     - /mnt/appdata/nextcloud/data:/data
+  #   restart: unless-stopped
+  #   ports:
+  #     - 443:443
+  #   networks: 
+  #     macvlan_network:
+  #       ipv4_address: 192.168.100.11
+  # bazarr:
+  #   image: linuxserver/bazarr
+  #   container_name: bazarr
+  #   environment:
+  #     - "PUID=${PUID}"
+  #     - "PGID=${PGID}"
+  #     - "TZ=${TZ}"
+  #     - UMASK_SET=022
+  #   volumes:
+  #     - "/mnt/media/movies:/movies"
+  #     - "/mnt/media/tv:/tv"
+  #     - "/mnt/appdata/bazarr/config:/config"
+  #   restart: unless-stopped
+  #   labels: 
+  #     - traefik.enable=true
+  #     - traefik.backend=bazarr
+  #     - "traefik.frontend.rule=Host:bazarr.${DOMAINNAME}"
+  #     - traefik.port=6767
+  #     - traefik.docker.network=traefik_proxy
+  #     - traefik.frontend.headers.SSLRedirect=true
+  #     - traefik.frontend.headers.STSSeconds=315360000
+  #     - traefik.frontend.headers.browserXSSFilter=true
+  #     - traefik.frontend.headers.contentTypeNosniff=true
+  #     - traefik.frontend.headers.forceSTSHeader=true
+  #     - traefik.frontend.headers.SSLHost=frost.haus
+  #     - traefik.frontend.headers.STSIncludeSubdomains=true
+  #     - traefik.frontend.headers.STSPreload=true
+  #     - traefik.frontend.headers.frameDeny=false
+  #   networks: 
+  #     - traefik_proxy
   readarr:
     image: hotio/readarr:nightly
     container_name: readarr
@@ -391,40 +391,40 @@ services:
       - "/mnt/media/tv:/tv"
       - "/mnt/media/downloads/tv-downloads:/tv-downloads"
       - /mnt/appdata/healthcheck:/config/crontabs
-  tautulli: 
-    container_name: tautulli
-    depends_on: 
-      - plex
-    environment: 
-      - "PUID=${PUID}"
-      - "PGID=${PGID}"
-      - TZ=America/Chicago
-      - DOCKER_MODS=linuxserver/mods:universal-cron
-    image: linuxserver/tautulli:latest
-    labels: 
-      - traefik.enable=true
-      - traefik.backend=tautulli
-      - "traefik.frontend.rule=Host:tautulli.${DOMAINNAME}"
-      - traefik.port=8181
-      - traefik.docker.network=traefik_proxy
-      - traefik.frontend.headers.SSLRedirect=true
-      - traefik.frontend.headers.STSSeconds=315360000
-      - traefik.frontend.headers.browserXSSFilter=true
-      - traefik.frontend.headers.contentTypeNosniff=true
-      - traefik.frontend.headers.forceSTSHeader=true
-      - traefik.frontend.headers.SSLHost=frost.haus
-      - traefik.frontend.headers.STSIncludeSubdomains=true
-      - traefik.frontend.headers.STSPreload=true
-      - traefik.frontend.headers.frameDeny=false
-    links: 
-      - plex
-    networks: 
-      - traefik_proxy
-    restart: always
-    volumes: 
-      - "/mnt/appdata/plexpy:/config"
-      - "/mnt/appdata/plex/Library/Application\\ Support/Plex\\ Media\\ Server/Logs:/logs:ro"
-      - /mnt/appdata/healthcheck:/config/crontabs
+  # tautulli: 
+  #   container_name: tautulli
+  #   depends_on: 
+  #     - plex
+  #   environment: 
+  #     - "PUID=${PUID}"
+  #     - "PGID=${PGID}"
+  #     - TZ=America/Chicago
+  #     - DOCKER_MODS=linuxserver/mods:universal-cron
+  #   image: linuxserver/tautulli:latest
+  #   labels: 
+  #     - traefik.enable=true
+  #     - traefik.backend=tautulli
+  #     - "traefik.frontend.rule=Host:tautulli.${DOMAINNAME}"
+  #     - traefik.port=8181
+  #     - traefik.docker.network=traefik_proxy
+  #     - traefik.frontend.headers.SSLRedirect=true
+  #     - traefik.frontend.headers.STSSeconds=315360000
+  #     - traefik.frontend.headers.browserXSSFilter=true
+  #     - traefik.frontend.headers.contentTypeNosniff=true
+  #     - traefik.frontend.headers.forceSTSHeader=true
+  #     - traefik.frontend.headers.SSLHost=frost.haus
+  #     - traefik.frontend.headers.STSIncludeSubdomains=true
+  #     - traefik.frontend.headers.STSPreload=true
+  #     - traefik.frontend.headers.frameDeny=false
+  #   links: 
+  #     - plex
+  #   networks: 
+  #     - traefik_proxy
+  #   restart: always
+  #   volumes: 
+  #     - "/mnt/appdata/plexpy:/config"
+  #     - "/mnt/appdata/plex/Library/Application\\ Support/Plex\\ Media\\ Server/Logs:/logs:ro"
+  #     - /mnt/appdata/healthcheck:/config/crontabs
   traefik: 
     container_name: traefik
     domainname: "${DOMAINNAME}"
