--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,7 +32,7 @@ services:
     volumes:
       - "/mnt/appdata/olivetin/:/config"
       - "/var/run/docker.sock:/var/run/docker.sock"
-      - "/home/${HTTP_USERNAME}/.ssh/:/home/OliveTin/.ssh/:ro"
+      - "/home/${HTTP_USERNAME}/.ssh/:/home/olivetin/.ssh/:ro"
     restart: unless-stopped
     networks: 
       - traefik_proxy
