--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -112,36 +112,36 @@ services:
   #   networks: 
   #     macvlan_network:
   #       ipv4_address: 192.168.100.11
-  # bazarr:
-  #   image: linuxserver/bazarr
-  #   container_name: bazarr
-  #   environment:
-  #     - "PUID=${PUID}"
-  #     - "PGID=${PGID}"
-  #     - "TZ=${TZ}"
-  #     - UMASK_SET=022
-  #   volumes:
-  #     - "/mnt/media/movies:/movies"
-  #     - "/mnt/media/tv:/tv"
-  #     - "/mnt/appdata/bazarr/config:/config"
-  #   restart: unless-stopped
-  #   labels: 
-  #     - traefik.enable=true
-  #     - traefik.backend=bazarr
-  #     - "traefik.frontend.rule=Host:bazarr.${DOMAINNAME}"
-  #     - traefik.port=6767
-  #     - traefik.docker.network=traefik_proxy
-  #     - traefik.frontend.headers.SSLRedirect=true
-  #     - traefik.frontend.headers.STSSeconds=315360000
-  #     - traefik.frontend.headers.browserXSSFilter=true
-  #     - traefik.frontend.headers.contentTypeNosniff=true
-  #     - traefik.frontend.headers.forceSTSHeader=true
-  #     - traefik.frontend.headers.SSLHost=frost.haus
-  #     - traefik.frontend.headers.STSIncludeSubdomains=true
-  #     - traefik.frontend.headers.STSPreload=true
-  #     - traefik.frontend.headers.frameDeny=false
-  #   networks: 
-  #     - traefik_proxy
+  bazarr:
+    image: linuxserver/bazarr
+    container_name: bazarr
+    environment:
+      - "PUID=${PUID}"
+      - "PGID=${PGID}"
+      - "TZ=${TZ}"
+      - UMASK_SET=022
+    volumes:
+      - "/mnt/media/movies:/movies"
+      - "/mnt/media/tv:/tv"
+      - "/mnt/appdata/bazarr/config:/config"
+    restart: unless-stopped
+    labels: 
+      - traefik.enable=true
+      - traefik.backend=bazarr
+      - "traefik.frontend.rule=Host:bazarr.${DOMAINNAME}"
+      - traefik.port=6767
+      - traefik.docker.network=traefik_proxy
+      - traefik.frontend.headers.SSLRedirect=true
+      - traefik.frontend.headers.STSSeconds=315360000
+      - traefik.frontend.headers.browserXSSFilter=true
+      - traefik.frontend.headers.contentTypeNosniff=true
+      - traefik.frontend.headers.forceSTSHeader=true
+      - traefik.frontend.headers.SSLHost=frost.haus
+      - traefik.frontend.headers.STSIncludeSubdomains=true
+      - traefik.frontend.headers.STSPreload=true
+      - traefik.frontend.headers.frameDeny=false
+    networks: 
+      - traefik_proxy
   readarr:
     image: hotio/readarr:nightly
     container_name: readarr
